--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "dependencies": {
     "apollo-server": "^2.16.1",
     "gitignore": "^0.6.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "mysql2": "^2.1.0",
+    "pg": "^8.3.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
