--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "apollo-server": "^2.16.1",
+    "bcryptjs": "^2.4.3",
     "gitignore": "^0.6.0",
     "graphql": "^15.3.0",
     "mysql2": "^2.1.0",
